tests/sksl/errors/ReservedNameOutput.glsl
### Compilation failed:

error: 1: 'output' is a reserved word
int output;
    ^^^^^^
1 error
